--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
 
+    <div class="" ng-app="">
+      <p>Input your name: <input type="text" name="" value="" ng-model="name"> </p>
+      <h1>Hello {{name}}</h1>
+    </div>
 
 
 
