--- a/modules-controllers.html
+++ b/modules-controllers.html
@@ -2,12 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Angular World</title>
+    <title>Angular Modules Controllers View</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
     <script src="js/modules-controllers.js"></script>
   </head>
   <body>
 
+    <div data-ng-app="myModule">
+      <div data-ng-controller="myCtrl">
+        {{message}}
+      </div>
+    </div>
 
   </body>
 </html>
